--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 
         // Typing Effect
         const textElement = document.getElementById('typing-text');
-        const phrases = ['DzungLayout', 'an Editor', 'a Designer', 'a Minimalist'];
+        const phrases = ['DzungLayout', 'an Video Editor', 'a Designer', 'a Minimalist'];
         let phraseIndex = 0;
         let charIndex = 0;
         let isDeleting = false;
@@ -514,6 +514,7 @@
     </script>
 </body>
 </html>
+
 
 
 
