--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <!-- Project 2 -->
                 <div class="group cursor-pointer md:mt-20">
                     <div class="relative overflow-hidden aspect-[3/4] mb-6 bg-stone-100">
-                        <img src="https://imagesweb-show-1.jpg" alt="Work 2" class="object-cover w-full h-full transform transition duration-700 group-hover:scale-105 filter grayscale group-hover:grayscale-0">
+                        <img src="images/web-show-1.jpg" alt="Work 2" class="object-cover w-full h-full transform transition duration-700 group-hover:scale-105 filter grayscale group-hover:grayscale-0">
                     </div>
                     <div class="flex justify-between items-start">
                         <div>
@@ -845,3 +845,4 @@
     </script>
 </body>
 </html>
+
