--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         }
         /* 1. Khai báo Font mới */
 @font-face {
-    font-family: 'DzungSignature'; /* Tự đặt tên cho font */
+    font-family: 'Scripture'; /* Tự đặt tên cho font */
     /* Đường dẫn trỏ vào thư mục fonts bạn vừa tạo */
     src: url('fonts/Scripture.ttf') format('truetype'); 
     font-weight: normal;
@@ -430,8 +430,8 @@
                             <!-- Class font-signature-custom sẽ gọi font bạn vừa cài -->
                             <!-- text-5xl: Cỡ chữ to -->
                             <!-- -rotate-6: Xoay nghiêng nhẹ (-6 độ) cho giống viết tay thật -->
-                            <p class="font-signature-custom text-5xl md:text-6xl text-primary dark:text-white transform -rotate-6 origin-left select-none">
-                                Dzung Layout
+                            <p class="font-signature-custom text-3xl md:text-6xl text-primary dark:text-white transform -rotate-0 origin-left select-none">
+                                DzungLayout
                             </p>
                         </div>
                     </div>
@@ -940,6 +940,7 @@
     </script>
 </body>
 </html>
+
 
 
 
