--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                             <!-- text-5xl: Cỡ chữ to -->
                             <!-- -rotate-6: Xoay nghiêng nhẹ (-6 độ) cho giống viết tay thật -->
                             <p class="font-signature-custom text-1xl md:text-3xl text-primary dark:text-white transform -rotate-0 origin-left select-none">
-                                DzungLayout.
+                                DzungLayout
                             </p>
                         </div>
                     </div>
@@ -939,6 +939,7 @@
     </script>
 </body>
 </html>
+
 
 
 
