--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         @font-face {
             font-family: 'scripture';
             /* LƯU Ý: Kiểm tra kỹ tên file trên GitHub chính xác từng ký tự hoa/thường */
-            src: url('fonts/scripture.ttf') format('truetype'); 
+            src: url('fonts/Scripture.ttf') format('truetype'); 
             font-weight: normal;
             font-style: normal;
             font-display: swap;
@@ -939,6 +939,7 @@
     </script>
 </body>
 </html>
+
 
 
 
