--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </div>
 
                  <!-- Project 3 -->
-                 <div class="group cursor-pointer video-trigger" data-video-id="LXb3EKWsInQ">
+                 <div class="group cursor-pointer video-trigger" data-video-id="6avPyTcdmtw">
                     <div class="relative overflow-hidden aspect-[16/9] mb-6 bg-stone-100">
                         <img src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?w=800&auto=format&fit=crop&q=80" alt="Work 3" class="object-cover w-full h-full transform transition duration-700 group-hover:scale-105 filter grayscale group-hover:grayscale-0">
                         <div class="absolute inset-0 bg-black/20 group-hover:bg-black/40 transition duration-500 flex items-center justify-center">
@@ -939,6 +939,7 @@
     </script>
 </body>
 </html>
+
 
 
 
