--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         <video autoplay loop muted playsinline class="absolute inset-0 w-full h-full object-cover brightness-75">
             <!-- Dùng video mẫu visual art/abstract -->
             <source src="video/Ecopack1.mp4" type="video/mp4">
-          <!--  <source src="https://videos.pexels.com/video-files/3129957/3129957-uhd_2560_1440_25fps.mp4" type="video/mp4"> -->
+          <!--  "https://videos.pexels.com/video-files/3129957/3129957-uhd_2560_1440_25fps.mp4" type="video/mp4"> -->
             Your browser does not support the video tag.
         </video>
         
@@ -874,5 +874,6 @@
     </script>
 </body>
 </html>
+
 
 
