--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 DzungLayout
             </h1>
             <p class="text-white/90 text-xs md:text-base lg:text-xl tracking-[0.5em] uppercase mt-4 font-light animate-pulse">
-                Video editing - Graphic designer
+                Crafting emotions through frames and pixels.
             </p>
         </div>
         
@@ -992,4 +992,5 @@
     </script>
 </body>
 </html>
+
 
