--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
     <section class="relative h-screen w-full flex items-center justify-center overflow-hidden bg-black">
         <!-- Video Background -->
         <video autoplay loop muted playsinline class="absolute inset-0 w-full h-full object-cover opacity-80">
-            <source src="video/Ecopark1" type="video/mp4">
+            <source src="video/Ecopark1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         
@@ -760,4 +760,5 @@
     </script>
 </body>
 </html>
+
 
