--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
         </div>
     </section>
 
-    <!-- FEATURED SHOWREEL (ĐÃ KHÔI PHỤC) -->
+     <!-- FEATURED SHOWREEL (ĐÃ KHÔI PHỤC) -->
     <section class="relative h-screen w-full flex items-center justify-center overflow-hidden bg-black">
         <!-- Video Background -->
         <video autoplay loop muted playsinline class="absolute inset-0 w-full h-full object-cover opacity-80">
-            <source src="video/Ecopack1.mp4" type="video/mp4">
+            <source src="https://videos.pexels.com/video-files/3129957/3129957-uhd_2560_1440_25fps.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         
@@ -760,6 +760,7 @@
     </script>
 </body>
 </html>
+
 
 
 
