--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <!-- Project 1 (Film) -->
                 <div class="work-item group cursor-pointer video-trigger reveal" data-category="film" data-video-id="zjUzZNXi2aQ"> 
                     <div class="relative overflow-hidden aspect-[16/9] mb-6 bg-stone-100">
-                        <img src="https://youtu.be/zjUzZNXi2aQ" alt="Work 1" class="object-cover w-full h-full transform transition duration-700 group-hover:scale-105 filter grayscale group-hover:grayscale-0">
+                        <img src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?w=800&auto=format&fit=crop&q=80" alt="Work 1" class="object-cover w-full h-full transform transition duration-700 group-hover:scale-105 filter grayscale group-hover:grayscale-0">
                         <div class="absolute inset-0 bg-black/20 group-hover:bg-black/40 transition duration-500 flex items-center justify-center">
                             <div class="w-16 h-16 bg-white/20 backdrop-blur-sm rounded-full flex items-center justify-center group-hover:scale-110 transition duration-300"><i class="fas fa-play text-white text-xl pl-1"></i></div>
                         </div>
@@ -264,7 +264,7 @@
                 <!-- Project 2 (Design) -->
                 <div class="work-item group cursor-pointer md:mt-20 reveal" data-category="design">
                     <div class="relative overflow-hidden aspect-[3/4] mb-6 bg-stone-100">
-                        <img src="https://satecay.github.io/portfolio-2025/images/web-show-1.jpg$0" alt="Work 2" class="object-cover w-full h-full transform transition duration-700 group-hover:scale-105 filter grayscale group-hover:grayscale-0">
+                        <img src="images/web-show-1.jpg" alt="Work 2" class="object-cover w-full h-full transform transition duration-700 group-hover:scale-105 filter grayscale group-hover:grayscale-0">
                     </div>
                     <div class="flex justify-between items-start">
                         <div>
@@ -760,6 +760,7 @@
     </script>
 </body>
 </html>
+
 
 
 
