--- a/index.html
+++ b/index.html
@@ -324,11 +324,11 @@
             Your browser does not support the video tag.
         </video>
         
-        <!-- Overlay Content -->
-        <div class="relative z-20 text-center text-white px-6">
+       <!-- Overlay Content -->
+     <!--   <div class="relative z-20 text-center text-white px-6">
             <p class="text-sm md:text-base font-bold tracking-[0.5em] uppercase mb-4 animate-pulse">Showreel 2025</p>
             <h2 class="text-6xl md:text-9xl font-serif italic tracking-tighter mix-blend-overlay">Emotion &<br>Motion</h2>
-            
+    -->        
             <!-- Play Button -->
             <button class="mt-12 w-20 h-20 rounded-full border border-white/30 flex items-center justify-center hover:bg-white hover:text-black transition duration-500 group video-trigger mx-auto" data-video-id="tgbNymZ7vqY">
                 <i class="fas fa-play text-2xl pl-1 group-hover:scale-110 transition"></i>
@@ -767,6 +767,7 @@
     </script>
 </body>
 </html>
+
 
 
 
