--- a/index.html
+++ b/index.html
@@ -142,9 +142,14 @@
             <div class="group relative w-full h-full overflow-hidden border border-white/5 hidden md:block"><img src="Hero-section/11.jpg" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Motion"></div>
             <div class="group relative w-full h-full overflow-hidden border border-white/5"><img src="Hero-section/Miracleweb.jpg" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Design"></div>
             <div class="group relative w-full h-full overflow-hidden border border-white/5 hidden lg:block"><img src="Hero-section/Mobile-Welcome.jpg" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Travel"></div>
-            <div class="group relative w-full h-full overflow-hidden border border-white/5"><img src="Hero-section/NTL1.png" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Motion"></div>
-            <div class="group relative w-full h-full overflow-hidden border border-white/5"><img src="Hero-section/NTL2.png" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Travel"></div>
-            <div class="group relative w-full h-full overflow-hidden border border-white/5 hidden md:block"><img src="Hero-section/NTL3.png" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Design"></div>
+            <!-- VIDEO REPLACEMENT (Grid Item 8) -->
+            <div class="group relative w-full h-full overflow-hidden border border-white/5 hidden lg:block">
+                <video autoplay loop muted playsinline class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110">
+                    <source src="Hero-section/9.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="group relative w-full h-full overflow-hidden border border-white/5"><img src="Hero-section/NTL1.png" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Travel"></div>
+            <div class="group relative w-full h-full overflow-hidden border border-white/5 hidden md:block"><img src="Hero-section/NTL2.jpg" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Design"></div>
             <div class="group relative w-full h-full overflow-hidden border border-white/5 hidden lg:block"><img src="Hero-section/NTL4.png" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Motion"></div>
             <div class="group relative w-full h-full overflow-hidden border border-white/5"><img src="Hero-section/NTL5.png" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Travel"></div>
             <div class="group relative w-full h-full overflow-hidden border border-white/5 hidden lg:block"><img src="Hero-section/NTL6.png" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Design"></div>
@@ -767,6 +772,7 @@
     </script>
 </body>
 </html>
+
 
 
 
