--- a/index.html
+++ b/index.html
@@ -137,8 +137,13 @@
             <div class="group relative w-full h-full overflow-hidden border border-white/5 hidden lg:block"><img src="Hero-section/7.jpg" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Travel"></div>
             <div class="group relative w-full h-full overflow-hidden border border-white/5 hidden lg:block"><img src="Hero-section/5.jpg" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Motion"></div>
             <div class="group relative w-full h-full overflow-hidden border border-white/5"><img src="Hero-section/6.jpg" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Design"></div>
-            <div class="group relative w-full h-full overflow-hidden border border-white/5"><img src="Hero-section/9.mp4" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Design"></div>
-            <div class="group relative w-full h-full overflow-hidden border border-white/5 hidden lg:block"><source src="Hero-section/9.mp4" type="video/mp4"> class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Travel"></div>
+            <!-- VIDEO REPLACEMENT (Grid Item 8) -->
+            <div class="group relative w-full h-full overflow-hidden border border-white/5 hidden lg:block">
+                <video autoplay loop muted playsinline class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110">
+                    <source src="Hero-section/10.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="group relative w-full h-full overflow-hidden border border-white/5 hidden lg:block"><img src="Hero-section/SkinAqua.png" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Travel"></div>
             <div class="group relative w-full h-full overflow-hidden border border-white/5 hidden md:block"><img src="Hero-section/11.jpg" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Motion"></div>
             <div class="group relative w-full h-full overflow-hidden border border-white/5"><img src="Hero-section/Miracleweb.jpg" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Design"></div>
             <div class="group relative w-full h-full overflow-hidden border border-white/5 hidden lg:block"><img src="Hero-section/Mobile-Welcome.jpg" class="absolute inset-0 w-full h-full object-cover grayscale brightness-[0.5] transition-all duration-700 ease-out group-hover:grayscale-0 group-hover:brightness-100 group-hover:scale-110" alt="Travel"></div>
@@ -772,6 +777,7 @@
     </script>
 </body>
 </html>
+
 
 
 
