--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
                     </div>
                     <div class="flex justify-between items-start">
                         <div>
-                            <span class="text-xs font-bold tracking-widest uppercase text-accent mb-1 block">Travel Film</span>
-                            <h3 class="text-2xl italic group-hover:translate-x-2 transition duration-300" data-i18n="project1.title">Northwest Journey</h3>
+                            <span class="text-xs font-bold tracking-widest uppercase text-accent mb-1 block">Video Editor</span>
+                            <h3 class="text-2xl italic group-hover:translate-x-2 transition duration-300" data-i18n="project1.title">Talkshow Người Thắp Lửa</h3>
                         </div>
                         <span class="text-xs border border-stone-300 px-2 py-1 rounded-full text-stone-500">2024</span>
                     </div>
@@ -279,7 +279,7 @@
                     <div class="flex justify-between items-start">
                         <div>
                             <span class="text-xs font-bold tracking-widest uppercase text-accent mb-1 block">Brand Identity</span>
-                            <h3 class="text-2xl italic group-hover:translate-x-2 transition duration-300">The Coffee House</h3>
+                            <h3 class="text-2xl italic group-hover:translate-x-2 transition duration-300">Graphic Design</h3>
                         </div>
                         <span class="text-xs border border-stone-300 px-2 py-1 rounded-full text-stone-500">2023</span>
                     </div>
@@ -777,6 +777,7 @@
     </script>
 </body>
 </html>
+
 
 
 
