--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <div class="flex justify-between items-start">
                         <div>
                             <span class="text-xs font-bold tracking-widest uppercase text-accent mb-1 block">Brand Identity</span>
-                            <h3 class="text-2xl italic group-hover:translate-x-2 transition duration-300">Graphic Design</h3>
+                            <h3 class="text-2xl italic group-hover:translate-x-2 transition duration-300">Sunplay - Micracle</h3>
                         </div>
                         <span class="text-xs border border-stone-300 px-2 py-1 rounded-full text-stone-500">2024</span>
                     </div>
@@ -777,6 +777,7 @@
     </script>
 </body>
 </html>
+
 
 
 
