--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <!-- Project 1 (Film) -->
                 <div class="work-item group cursor-pointer video-trigger reveal" data-category="film" data-video-id="zjUzZNXi2aQ"> 
                     <div class="relative overflow-hidden aspect-[16/9] mb-6 bg-stone-100">
-                        <img src="https://cdn.pixabay.com/photo/2024/07/25/23/56/interior-design-8922413_640.jpg" alt="Work 1" class="object-cover w-full h-full transform transition duration-700 group-hover:scale-105 filter grayscale group-hover:grayscale-0">
+                        <img src="https://plus.unsplash.com/premium_photo-1711061959382-0de7a4bddccf?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mzd8fHN0dWRpb3xlbnwwfHwwfHx8MA%3D%3D" alt="Work 1" class="object-cover w-full h-full transform transition duration-700 group-hover:scale-105 filter grayscale group-hover:grayscale-0">
                         <div class="absolute inset-0 bg-black/20 group-hover:bg-black/40 transition duration-500 flex items-center justify-center">
                             <div class="w-16 h-16 bg-white/20 backdrop-blur-sm rounded-full flex items-center justify-center group-hover:scale-110 transition duration-300"><i class="fas fa-play text-white text-xl pl-1"></i></div>
                         </div>
@@ -777,6 +777,7 @@
     </script>
 </body>
 </html>
+
 
 
 
