--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                     </div>
                 </div>
             </div>
-        </div> 
+        </div> -->
 
                  <div class="work-item group cursor-pointer video-trigger reveal" data-category="film" data-video-id="LXb3EKWsInQ">
                     <div class="relative overflow-hidden aspect-[16/9] mb-6 bg-stone-100">
@@ -793,6 +793,7 @@
     </script>
 </body>
 </html>
+
 
 
 
