--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
                  <div class="work-item group cursor-pointer video-trigger reveal" data-category="film" data-video-id="uyn2Oa7K5J4">
                     <div class="relative overflow-hidden aspect-[16/9] mb-6 bg-stone-100">
-                        <img src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?w=800&auto=format&fit=crop&q=80" alt="Work 3" class="object-cover w-full h-full transform transition duration-700 group-hover:scale-105 filter grayscale group-hover:grayscale-0">
+                        <img src="images/Artboard-1.png" alt="Work 3" class="object-cover w-full h-full transform transition duration-700 group-hover:scale-105 filter grayscale group-hover:grayscale-0">
                         <div class="absolute inset-0 bg-black/20 group-hover:bg-black/40 transition duration-500 flex items-center justify-center">
                             <div class="w-16 h-16 bg-white/20 backdrop-blur-sm rounded-full flex items-center justify-center group-hover:scale-110 transition duration-300"><i class="fas fa-play text-white text-xl pl-1"></i></div>
                         </div>
@@ -793,6 +793,7 @@
     </script>
 </body>
 </html>
+
 
 
 
