--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                  <div class="work-item group cursor-pointer video-trigger reveal" data-category="film" data-video-id="uyn2Oa7K5J4">
                    <!-- <div class="relative overflow-hidden aspect-[16/9] mb-6 bg-stone-100"> -->
                        <div class="relative overflow-hidden aspect-[4/5] mb-6 bg-stone-100">
-                        <img src="images/Artboard-1.png" alt="Work 3" class="object-cover w-full h-full transform transition duration-700 group-hover:scale-105 filter grayscale group-hover:grayscale-0">
+                        <img src="images/Artboard-1.png" alt="Work 4" class="object-cover w-full h-full transform transition duration-700 group-hover:scale-105 filter grayscale group-hover:grayscale-0">
                         <div class="absolute inset-0 bg-black/20 group-hover:bg-black/40 transition duration-500 flex items-center justify-center">
                             <div class="w-16 h-16 bg-white/20 backdrop-blur-sm rounded-full flex items-center justify-center group-hover:scale-110 transition duration-300"><i class="fas fa-play text-white text-xl pl-1"></i></div>
                         </div>
@@ -329,7 +329,7 @@
                     <div class="flex justify-between items-start">
                         <div>
                             <span class="text-xs font-bold tracking-widest uppercase text-accent mb-1 block">Motion Graphics</span>
-                            <h3 class="text-2xl italic group-hover:translate-x-2 transition duration-300">Cyberpunk Intro</h3>
+                            <h3 class="text-2xl italic group-hover:translate-x-2 transition duration-300">Đồng Tâm Long An Banner</h3>
                         </div>
                         <span class="text-xs border border-stone-300 px-2 py-1 rounded-full text-stone-500">2024</span>
                     </div>
@@ -794,6 +794,7 @@
     </script>
 </body>
 </html>
+
 
 
 
