--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                     </p>
                 </div>
 
-                <!-- Item 2: VFX & Motion (CANH PHẢI - Aligned Left) -->
+                <!-- Item 2: Web Design (CANH PHẢI - Aligned Left) -->
                 <div class="flex flex-col items-center text-center z-10 reveal delay-100 md:w-1/2">
                      <div class="mb-4 text-4xl text-primary dark:text-white transition-transform duration-500 hover:-translate-y-2">
                          <i class="fas fa-cubes"></i>
@@ -428,11 +428,11 @@
                     <h3 class="text-2xl md:text-4xl font-serif italic font-bold mb-4" data-i18n="services.s2_title">VFX & Motion</h3>
                     <div class="w-24 h-px bg-stone-300 dark:bg-stone-700 mb-4"></div>
                      <p class="text-stone-500 dark:text-stone-400 leading-relaxed" data-i18n="services.s2_desc">
-                        Elevating visuals with motion graphics, compositing, and visual effects that captivate.
+                        Enhance your visual experience with attractive web interfaces, presentations, and visual effects.
                     </p>
                 </div>
 
-                <!-- Item 3: Art Direction (CANH TRÁI - Aligned Right - Thẳng hàng với Post-Production) -->
+                <!-- Item 3: Brand Identity Design (CANH TRÁI - Aligned Right - Thẳng hàng với Post-Production) -->
                 <div class="flex flex-col items-center text-center z-10 reveal delay-100 md:w-1/2 md:ml-auto">
                     <div class="mb-4 text-4xl text-primary dark:text-white transition-transform duration-500 hover:-translate-y-2">
                         <i class="fas fa-compass"></i>
@@ -849,6 +849,7 @@
     </script>
 </body>
 </html>
+
 
 
 
