--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                     <div class="flex justify-between items-start">
                         <div>
                             <span class="text-xs font-bold tracking-widest uppercase text-accent mb-1 block">Motion Graphics</span>
-                            <h3 class="text-2xl italic group-hover:translate-x-2 transition duration-300">Đồng Tâm Long An Banner</h3>
+                            <h3 class="text-2xl italic group-hover:translate-x-2 transition duration-300">Đồng Tâm Long An banner</h3>
                         </div>
                         <span class="text-xs border border-stone-300 px-2 py-1 rounded-full text-stone-500">2024</span>
                     </div>
@@ -407,7 +407,7 @@
             <!-- Giảm gap-24/32 xuống gap-16 để gọn hơn -->
             <div class="flex flex-col gap-10 md:gap-20 relative">
                 
-                <!-- Item 1: Post-Production (CANH TRÁI - Aligned Right items-end text-right) -->
+                <!-- Item 1: Post-Production. (CANH TRÁI - Aligned Right items-end text-right) -->
                 <div class="flex flex-col items-center text-center z-10 reveal md:w-1/2 md:ml-auto"> 
                     <div class="mb-4 text-4xl text-primary dark:text-white transition-transform duration-500 hover:-translate-y-2">
                         <i class="fas fa-film"></i>
@@ -849,6 +849,7 @@
     </script>
 </body>
 </html>
+
 
 
 
