--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                 hero: { subtitle: "Portfolio 2025", title1: "Visual", title2: "Storyteller", intro: "I am", desc: "Crafting emotions through frames and pixels.", cta_work: "View Selected Work", cta_contact: "Get in touch", scroll: "Scroll" },
                 work: { title: "Selected Work", subtitle: "A collection of moments & brands.", filter_all: "All" },
                 project1: { title: "Talkshow Người Thắp Lửa" },
-                services: { label: "What I do", title: "Services", desc: "Comprehensive visual solutions tailored for brands that value aesthetics and storytelling.", s1_title: "Post-Production", s1_desc: "Professional editing, sound design, and color grading for commercials, music videos, and documentaries.", s2_title: "Motion & VFX", s2_desc: "Elevating visuals with 2D/3D motion graphics, compositing, and visual effects that captivate.", s3_title: "Art Direction", s3_desc: "Defining the visual language and aesthetic strategy for brands, ensuring consistency across all media." },
+                services: { label: "What I do", title: "Services", desc: "Comprehensive visual solutions tailored for brands that value aesthetics and storytelling.", s1_title: "Post-Production", s1_desc: "Professional editing, sound design, and color grading for commercials, music videos, and documentaries.", s2_title: "Web Design", s2_desc: "Enhance your visual experience with attractive web interfaces, presentations, and visual effects.", s3_title: "Brand Identity Design", s3_desc: "Defining the visual language and aesthetic strategy for brands, ensuring consistency across all media." },
                 ai: { label: "Experimental", title: "AI Creative Studio", desc: "Merging human intuition with machine intelligence. A suite of tools I use to spark inspiration.", t1_title: "Concept Generator", t1_desc: "Generate art direction & visual mood.", t1_placeholder: "Enter a subject (e.g. Noir City)...", t1_btn: "Ignite Spark", t2_title: "Draft Assistant", t2_desc: "Compose professional inquiries.", t2_placeholder: "Brief requirements...", t2_btn: "Compose" },
                 about: { intro: "The Person Behind", headline_1: "Visuals with", headline_2: "Soul & Purpose.", location: "Ho Chi Minh City", greeting: "Hi, I'm DzungLayout.", bio: "I am a Visual Director focused on storytelling through editing and motion. My approach is simple: strip away the unnecessary until only the essential emotion remains. I don't just edit videos; I engineer feelings.", philosophy: "\"Design is not just what it looks like and feels like. Design is how it works. I believe in minimalism that speaks volumes, and motion that evokes emotion.\"", expertise: "Expertise", recognition: "Recognition", stat_years: "Years Exp", stat_projects: "Projects", stat_happy: "Satisfaction" },
                 footer: { text: "Let's create something timeless." },
@@ -849,6 +849,7 @@
     </script>
 </body>
 </html>
+
 
 
 
