--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
         <div class="absolute inset-0 flex flex-col items-center justify-center pointer-events-none z-20">
             <h1 class="text-4xl md:text-8xl lg:text-9xl font-black tracking-tighter text-white uppercase drop-shadow-2xl text-center px-4" style="font-family: 'Be Vietnam Pro', sans-serif;">DzungLayout</h1>
-            <p class="text-white/90 text-xs md:text-base lg:text-xl tracking-[0.5em] uppercase mt-4 font-light animate-pulse">Crafting emotions through frames and pixels.</p>
+            <p class="text-white/90 text-xs md:text-base lg:text-x0.5 tracking-[0.5em] uppercase mt-4 font-light animate-pulse">Crafting emotions through frames and pixels.</p>
         </div>
         
         <div class="absolute bottom-10 left-1/2 transform -translate-x-1/2 z-30 animate-bounce">
@@ -849,6 +849,7 @@
     </script>
 </body>
 </html>
+
 
 
 
